--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,51 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-#top_nav{
-    display: flex;
-    justify-items: space-between;
-    margin: 5px 0;
-    position: relative;
+* ul {
+  list-style: none;
 }
-#top_nav_right{
-    position: absolute; 
-    right: 0;
-    bottom:5px; 
+* #top_nav {
+  display: flex;
+  justify-items: space-between;
+  margin: 5px 0;
+  position: relative;
 }
-ul{
-    list-style: none;
+* #top_nav_right {
+  position: absolute;
+  right: 0;
+  bottom: 5px;
 }
-#divide_sec{
-    background-color:orangered !important;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin-top: 5px;
-    border-top: 1px solid rgb(177, 177, 237);
-    border-bottom: 1px solid rgb(145, 145, 195);
+* #custom_nav {
+  border-bottom: 1px solid rgb(214, 208, 208);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 10px 0;
 }
-#divide_sec h4{
-    color: orangered;
+* #divide_sec {
+  background-color: orangered !important;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 5px;
+  border-top: 1px solid rgb(177, 177, 237);
+  border-bottom: 1px solid rgb(145, 145, 195);
 }
-.button {
-    border: none;
-    color: white;
-    padding: 9px 38px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 13px;
-    margin: 4px 0;
-    cursor: pointer;
-  }
-  h4{
-    font-family: 'Times New Roman', Times, serif;
-  }
+* #divide_sec h4 {
+  color: orangered;
+}
+* .button {
+  border: none;
+  color: white;
+  padding: 9px 38px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 13px;
+  margin: 4px 0;
+  cursor: pointer;
+}
+* h4 {
+  font-family: "Times New Roman", Times, serif;
+}/*# sourceMappingURL=style.css.map */
